# akapen

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  README.md  app.py  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  requirements.txt
backend/: __init__.py  admin_ui.py  app.py  auth.py  config.py  db.py  fetcher.py  metrics.py  rate_limit.py  repo.py  schemas.py  token_bucket.py  webhook.py  worker.py
backend/prompts/: grading.md  ocr.md  single_shot.md
backend/routes/: __init__.py  health.py  tasks.py
core/: config.py  filenames.py  grader.py  imageproc.py  logger.py  ocr.py  qwen.py  schemas.py  storage.py
core/providers/: __init__.py  base.py  claude.py  gemini.py  qwen.py
demo/: __init__.py  app.py  storage.py
demo/prompts/: grading.md
docs/: DEPLOY_HANDOFF.md  PLAN_CN_SINGLE_SCHOOL_2C2G.md  WEB_PRODUCT.md
prompts/: grading.md  ocr.md  single_shot.md
scripts/: backup.sh  push-acr.sh  release.sh  smoke_api.py
web/: .dockerignore  .env.example  .gitignore  Dockerfile  docker-entrypoint.sh  middleware.ts  next.config.ts  package-lock.json  package.json  postcss.config.mjs  tsconfig.json
web/app/: globals.css  layout.tsx  page.tsx
web/components/: feedback-markdown.tsx  query-provider.tsx  student-image-grid.tsx
web/lib/: akapen.ts  auth.config.ts  auth.ts  db.ts  grade-data.ts  grading-result.ts  hmac.ts  image-compress.ts  model-catalog.ts  prompt-suggestion.ts  results-data.ts  uploads-shared.ts  uploads.ts  utils.ts  zod-helpers.ts
web/prisma/: schema.prisma
web/public/: .gitkeep
web/scripts/: migrate.sh  (+2 more)
(+69 files in other folders)
